--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "eslint-plugin-jest": "^23.9.0",
     "husky": "^4.2.5",
     "node-sass": "^4.14.1",
+    "ramda": "^0.27.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-hook-form": "^5.7.2",
     "react-intl": "^4.6.9",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
@@ -50,6 +52,7 @@
     "@testing-library/react-hooks": "^3.3.0",
     "@types/jest": "^24.9.1",
     "@types/node": "^12.12.38",
+    "@types/ramda": "^0.27.6",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.7",
     "@types/react-redux": "^7.1.8",
